# spark-lakehouse-etl

./: .gitignore  README.md  data_generator.py  main.py  pyproject.toml  smoke_test.py
docs/: data_model.md  lineage.md
pipeline/: ingest.py  reconcile.py  scd2.py  schemas.py  spark_session.py  transform.py
tests/: conftest.py  test_ingest.py  test_reconcile.py  test_scd2.py  test_transform.py
