[project]
name = "spark-lakehouse-etl"
version = "0.1.0"
description = "Batch ETL pipeline with Apache Spark and Iceberg — SCD Type 2, reconciliation, data quality"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5,<4.0",
    "faker>=28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "chispa>=0.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
